gccida/c3/result_vector
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/result_vector/src/builtins.c:1528:29: error: use of undeclared identifier 'machine_mode'
v10 = get_mode_alignment( ( machine_mode)v9) >> 3; 
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/result_vector/src/builtins.c:1531:22: error: use of undeclared identifier 'machine_mode'
v11 = gen_rtx_REG( ( machine_mode)v9, v2); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/result_vector/src/builtins.c:1532:35: error: use of undeclared identifier 'machine_mode'
v12 = adjust_address_1( result, ( machine_mode)v9, v3, 1, 1); 
                                  ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/result_vector/src/obj/builtins.o] Error 1
